examples/test/testpolicy652.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy652
  namespace: namespace389
spec:
  podSelector:
    matchLabels:
      key8: value48
      key17: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value0
      podSelector:
        matchLabels:
          key20: value18
          key22: value40
